@@ -1,3 +1,4 @@
+	* fix issue creating a v2 torrent from torrent_info containing an empty file
 	* make recheck files also update which files use partfile
 	* add write_through disk_io_write_mode, which flushes pieces to disk immediately
 	* improve copy file function to preserve sparse regions (when supported)
